--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "fastify": "^4.24.3",
-    "@fastify/multipart": "^8.0.0",
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.4",
-    "mongoose": "^8.0.3",
-    "zod": "^3.22.4",
+    "@fastify/multipart": "^8.0.0",
+    "@fastify/static": "^6.12.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "twilio": "^4.19.0",
-    "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/nodemailer": "^6.4.14",
     "@types/multer": "^1.4.11",
-    "typescript": "^5.3.3",
-    "tsx": "^4.6.2"
+    "@types/node": "^20.10.4",
+    "@types/nodemailer": "^6.4.14",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   }
 }
