--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@azure/identity": "^4.11.1",
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.4",
     "@fastify/multipart": "^8.0.0",
     "@fastify/static": "^6.12.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/microsoft-graph": "^2.40.1",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
